    argument is a weak automaton.  In this case the resulting
    acceptance condition is (usually) that of the other argument.

  - spot::remove_alternation() was slightly improved on very-weak
    alternating automata: the labeling of the outgoing transitions in
    the resulting TGBA makes it more likely that simulation-based
    reductions will reduce it.

  - The LTL simplification routine learned the following reductions,
    where f is any formula, and q is a "suspendable" formula (a.k.a.
    both a pure eventuality and purely universal).

      q R Xf = X(q R f)
      q U Xf = X(q U f)

  Python:

  - New spot.jupyter package.  This currently contains a function for
    displaying several arguments side by side in a Jupyter notebook.
    See https://spot.lrde.epita.fr/ipynb/alternation.html for some
    examples.

  - Strings are now implicitely converted into formulas when passed
    as arguments to functions that expect formulas.  Previously this
    was done only for a few functions.

  Bugs fixed:

  - print_dot() will correctly escape strings containing \n in HTML
    mode.

  - The HOA parser will now accept Alias: declarations that occur
    before AP:.

  - the option --allow-dups of randltl now works properly

  Deprecation notice:

  - The type spot::acc_cond::mark_t has been overhauled and uses
    a custom bit-vector to represent acceptance sets instead of
    storing everything in a "unsigned int".  This change is
    to accomodate configure's --enable-max-accsets=N option and
    has several effect:

    * The following shortcuts are deprecated:
        acc_cond::mark_t m1 = 0U;
        acc_cond::mark_t m2 = -1U;
      instead, use:
        acc_cond::mark_t m1 = {};
        acc_cond::mark_t m2 = acc_cond::mark_t::all();

    * acc_cond::mark_t::value_t is deprecated.  It is now only
      defined when --enable-max-accsets=32 (the default) and
      equal to "unsigned" for backward compatibility reasons.

  Backward incompatibilities:
